--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header .nav-bar i {
 
 .inicio .contenido-seccion header nav{
     position: fixed;
-    background-color: #940253;
+    background-color: #cdaeeb;
     padding: 15px;
     border-radius: 10px;
     text-align: left;
